[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_egui = "0.21.0"
js-sys = "0.3.64"
rand = "0.8.5"
strum = "0.25"
strum_macros = "0.25"
wasm-bindgen = "0.2.87"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
