[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy-tokio-tasks = "0.11.0"
bevy_egui = "0.21.0"
chrono = "0.4.31"
firestore = "0.36.0"
js-sys = "0.3.64"
rand = "0.8.5"
serde = "1.0.188"
serde_yaml = "0.9.25"
strum = "0.25"
strum_macros = "0.25"
uuid = "1.4.1"
wasm-bindgen = "0.2.87"
webbrowser = "0.8.11"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
